--- a/style.css
+++ b/style.css
@@ -1,97 +1,148 @@
 *{
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 body{
-    background-image: url('images/background.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-color: #1877F2;
+    font-family: Poppins;
     min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .wrapper{
-    background: rgb(255, 255, 255, 0.5);
-    width: 400px;
-    border-radius: 35px;
-    color: #f72585;
+    width: 330px;
+    background-color: rgb(255, 255, 255, 1);
+    border-radius: 10px;
     padding: 20px;
-    border: 2px solid rgb(0, 0, 78, .6);
 }
 .wrapper h1{
     text-align: center;
-    font-variant: small-caps;
-    font-weight: lighter;
+    font-weight: 500;
+    margin-bottom: 10px;
 }
-
 .wrapper .input-box{
-    position: relative;
     width: 100%;
     height: 40px;
-    border-radius: 20px;
-    margin: 10px 0px;
-    background-color: rgb(255, 255, 255, 0.3);
-}
-
-.input-box input{
-    width: 82%;
-    height: 100%;
-    background: transparent;
-    border: none;
-    outline: none;
-    font-size: 14px;
-    padding: 0px 20px;
-}
-.input-box input::placeholder{
-    color: #000;
-}
-.input-box i{
-    position: absolute;
-    right: 15px;
-    font-size: 26px;
-    top: 50%;
-    transform: translateY(-50%);
-    color: #FB4788;
-}
-.wrapper .remember-forgot{
     display: flex;
-    justify-content: space-between;
-    padding: 10px;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    
+    margin: 15px 0;
 }
-.remember-forgot a{
-    text-decoration: none; 
-    color: #008cff;
-    font-weight: 500;
-}
-.remember-forgot a:hover{
-    color: white;
+.input-box input{
+    width: 95%;
+    height: 40px;
+    border: 1px solid rgb(0, 0, 0, 0.3);
+    border-radius: 5px;
+    padding: 0 10px;
+    font-size: 15px;
+    outline: none;
 }
 .wrapper .btn{
     width: 100%;
     height: 40px;
-    background-color: #F18CB1;
-    border-radius: 20px;
+    background-color: #1877F2;
+    border-radius: 5px;
     border: none;
-    font-size: 14px;
+    font-size: 15px;
     font-weight: bold;
+    color: #fff;
+    font-weight:600;
 }
 .wrapper .btn:hover{
-    background-color: white;
-    transition: 1s;
+    background: #17A9FD;
+    color: #fff;
+    transition: 0.5s;
 }
-.wrapper .create{
-    width: 100%;
+.wrapper .alr{
+    width: 100;
     text-align: center;
     margin-top: 10px;
+    font-size: 14px;
 }
-.create a{
+.alr label{
+    
+    color: rgb(0, 0, 0, 0.8);
+}
+.alr a{
     text-decoration: none;
-    font-weight: 500;
-    color: #008cff;
+    color: #0165E1;
+}
+.alr a:hover{
+    color: #001b4b;
+    transition: 0.5s;
+}
+.wrapper .or{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: rgb(0, 0, 0, 0.7);
+    margin-top: 15px;
+    margin-bottom: 10px;
+    
+}
+.or p{
+    margin: 0 10px;
+    font-size: 14px;
+}
+.wrapper.button-box{
+    width: 100%;
+    position: relative;
+    
+}
+.button-box button{
+    width: 100%;
+    height: 40px;
+    margin: 5px 0;
+    
+}
+.button-box .btnfb{
+    width: 100%;
+    height: 40px;
+    background-color: #0165E1;
+    border-radius: 5px;
+    border: none;
+    font-size: 15px;
+    color: #fff;
+    font-weight:600;
+}
+.button-box .btnfb:hover{
+    background: #17A9FD;
+    color: #fff;
+    transition: 0.5s;
 }
 
-.create a:hover{
-    color: white;
+.button-box .btngoogle{
+    width: 100%;
+    height: 40px;
+    background-color: #fff;
+    border-radius: 5px;
+    border: 1px solid rgb(0, 0, 0, 0.3);
+    font-size: 15px;
+    color: rgb(0, 0, 0, 0.6);
+    font-weight:600;
+}
+.button-box .btngoogle:hover{
+    background-color: rgb(0, 0, 0, .2);
+    transition: 0.5s;
+}
+.button-box img{
+    height: 21px;
+    position: absolute;
+    margin-top: 13px;
+    margin-left: 10px;
+}
+.button-box i{
+    color: #fff;
+    font-size: 26px;
+    position: absolute;
+    margin-top: 12px;
+    margin-left: 8px;
+}
+
+.button-box img{
+    position:absolute;
 }
